--- a/resources/langs/fr.json
+++ b/resources/langs/fr.json
@@ -1,4 +1,10 @@
 {
+    "maps": {
+        "searchHint": "Rechercher un lieu ou saisissez une adresse",
+        "noResultsFound": "Aucun résultat trouvé",
+        "cannotOpenNavigation": "Aucune app de navigation ne peut être ouverte, installez une app comme Google Maps pour continuer",
+        "cannotReverseGeocode": "Impossible de récupérer l'adresse de l'emplacement épinglé"
+    },
     "general": {
         "unknownData": "Donnée inconnue",
         "defaultName": "Sans nom",
